--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,13 +2,13 @@
 # Environmental Variables Guide: https://www.appveyor.com/docs/environment-variables/
 #                YAML Validator: https://ci.appveyor.com/tools/validate-yaml
 
-version: 0.1.{build}.0
+image: Visual Studio 2015
 
 # scripts that are called at very beginning, before repo cloning
 init:
-  - git config --global core.autocrlf input
+  - git config --global core.autocrlf true
   - git config --global user.email "tomas.deceuninck@gmail.com"
-  - git config --global user.name "Tomas Deceuninck"  
+  - git config --global user.name "Tomas Deceuninck"
 
 # Only build commits to these branches
 branches:
@@ -43,13 +43,18 @@ environment:
 
 # Install NuGet to interact with the PowerShell Gallery
 install:
-- ps: |
-    Install-PackageProvider -Name NuGet -Force | Out-Null
-    Install-Module -Name InvokeBuild -Force | Out-Null
-    Install-Module -Name Pester -Force | Out-Null
-    Install-Module -Name PSScriptAnalyzer -Force | Out-Null
-    Install-Module -Name PlatyPS -Force | Out-Null
-    #Install-Module -Name posh-git -Force | Out-Null
+  - ps: |
+      Install-PackageProvider -Name NuGet -MinimumVersion 2.8.5.208 -Force | Out-Null
+      Install-Module -Name InvokeBuild -Force | Out-Null
+      Install-Module -Name Pester -Force | Out-Null
+      Install-Module -Name PSScriptAnalyzer -Force | Out-Null
+      Install-Module -Name PlatyPS -Force | Out-Null
+
+before_build:
+  - ps: |
+      Invoke-Build -Task ShowDebug
+      Invoke-Build -Task GetVersion
+      Update-AppveyorBuild -Version $env:version
 
 # run your custom scripts instead of automatic MSBuild
 build_script:
@@ -63,3 +68,12 @@ test_script:
 # scripts to run before deployment 
 deploy_script: 
   - ps: Invoke-Build -Task AppVeyorPublish
+
+on_success:
+  - git config --global credential.helper store
+  - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GitHubKey):x-oauth-basic@github.com`n"
+  - git add --all
+  - git commit -m "Update version to $env:APPVEYOR_BUILD_VERSION"
+  - git rebase HEAD master
+  - git push
+  - ps: Write-Host "$ModuleName PowerShell Module version $env:APPVEYOR_BUILD_VERSION published to GitHub." -ForegroundColor Cyan
