Build and Documentation Small changes to names of tasks in build file Changes to documetation generation with PlatyPS. Aim is to keep documentation in markdown. Parameter description and such should be updated automaticaly.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -52,7 +52,7 @@ install:
 
 before_build:
   - ps: |
-      Invoke-Build -Task ShowDebug
+      Invoke-Build -Task ShowAppVeyorDebug
       Invoke-Build -Task GetVersion
       Update-AppveyorBuild -Version $env:version
 
