--- a/appveyor.yml
+++ b/appveyor.yml
@@ -74,6 +74,6 @@ on_success:
   - ps: Add-Content "$env:USERPROFILE\.git-credentials" "https://$($env:GitHubKey):x-oauth-basic@github.com`n"
   - git add --all
   - git commit -m "Update version to $env:APPVEYOR_BUILD_VERSION"
-  - git rebase HEAD master
+  - git rebase HEAD $env:APPVEYOR_REPO_BRANCH
   - git push
   - ps: Write-Host "$ModuleName PowerShell Module version $env:APPVEYOR_BUILD_VERSION published to GitHub." -ForegroundColor Cyan
